replace glyphicon with fontawesome SVG: fix vertical-align

--- a/public/app.css
+++ b/public/app.css
@@ -308,6 +308,7 @@ Div.App {
 
 .ChooseFormat .text {
   margin-left: 2px;
+  vertical-align: text-top;
 }
 
 .Users .warning {
@@ -408,7 +409,7 @@ Div.App {
 }
 
 .btn .my-icon {
-  vertical-align: sub;
+  vertical-align: middle;
 }
 
 .UserInTable .btn-primary {
